// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTMLtoJSX Attribute transformations should convert "class" attribute 1`] = `
<div
  className="awesome"
>
  Test
</div>
`;

exports[`HTMLtoJSX Attribute transformations should convert "enctype" attribute to "encType" 1`] = `
<form
  encType="application/x-www-form-urlencoded"
  method="post"
>
  Test
</form>
`;

exports[`HTMLtoJSX Attribute transformations should convert "for" attribute 1`] = `
<label
  htmlFor="potato"
>
  Test
</label>
`;

exports[`HTMLtoJSX Attribute transformations should convert "http-equiv" attribute to "httpEquiv" 1`] = `
<meta
  httpEquiv="refresh"
/>
`;

exports[`HTMLtoJSX Attribute transformations should convert "maxlength" attribute to "maxLength" 1`] = `
<input
  maxLength={2}
/>
`;

exports[`HTMLtoJSX Attribute transformations should convert CSS shorthand "style" values 1`] = `
<div
  style={
    {
      "padding": "10px 15px 20px 25px",
    }
  }
>
  Test
</div>
`;

exports[`HTMLtoJSX Attribute transformations should convert SVG attributes 1`] = `
<svg
  height={100}
  width={100}
>
  <circle
    cx={50}
    cy={50}
    fill="red"
    fillRule="evenodd"
    r={40}
    stroke="black"
    strokeWidth={3}
  />
</svg>
`;

exports[`HTMLtoJSX Attribute transformations should convert basic "style" attributes 1`] = `
<div
  style={
    {
      "color": "red",
    }
  }
>
  Test
</div>
`;

exports[`HTMLtoJSX Attribute transformations should maintain value-less attributes 1`] = `
<input
  disabled={true}
/>
`;

exports[`HTMLtoJSX Attribute transformations should not set "value" to "defaultValue" for non-<input> elements 1`] = `
<select>
  <option
    value="Hans"
  />
</select>
`;

exports[`HTMLtoJSX Attribute transformations should pass thru vendor-prefix "style" attributes 1`] = `
<div
  style={
    {
      "-moz-hyphens": "auto",
      "-webkit-hyphens": "auto",
    }
  }
>
  Test
</div>
`;

exports[`HTMLtoJSX Attribute transformations should set <input> "checked" to "defaultChecked" to allow box checking 1`] = `
<input
  defaultChecked={true}
  type="checkbox"
/>
`;

exports[`HTMLtoJSX Attribute transformations should set <input> "value" to "defaultValue" to allow input editing 1`] = `
<input
  defaultValue="Darth Vader"
/>
`;

exports[`HTMLtoJSX escaped characters should handle escaped < symbols 1`] = `
<div>
  &lt;
</div>
`;

exports[`HTMLtoJSX escaped characters should handle unescaped copyright symbols 1`] = `
<div>
  ©
</div>
`;

exports[`HTMLtoJSX should handle basic HTML 1`] = `
<div>
  Hello world!
</div>
`;

exports[`HTMLtoJSX special tags should convert svg tag names 1`] = `
<svg>
  <clipPath>
    <feSpotLight>
      <linearGradient />
    </feSpotLight>
  </clipPath>
</svg>
`;

exports[`HTMLtoJSX special tags should dangerously set <style> tag contents 1`] = `
<style
  dangerouslySetInnerHTML={
    {
      "__html": "
h1 {
    background: url('http://foo.bar/img.jpg';
}
",
    }
  }
/>
`;

exports[`HTMLtoJSX special tags should do magic voodoo for <pre> 1`] = `
<pre>
  hello
  

  world
  {
  foo
  }
</pre>
`;

exports[`HTMLtoJSX special tags should gracefully handle malformed CSS in an HTML element's style attribute 1`] = `
<span
  style={
    {
      "*border-bottom": ".175em solid rgba( 209, 204, 189, 1)",
      "*color": "white",
      "*font-style": "italic",
      "*text-shadow": "rgb(74, 144, 226) 1px 0px 0px, rgb(74, 144, 226) 0.540302px 0.841471px 0px, rgb(74, 144, 226) -0.416147px 0.909297px 0px, rgb(74, 144, 226) -0.989992px 0.14112px 0px, rgb(74, 144, 226) -0.653644px -0.756802px 0px, rgb(74, 144, 226) 0.283662px -0.958924px 0px, rgb(74, 144, 226) 0.96017px -0.279415px 0px",
      "color": "rgb(209, 204, 189)",
      "float": "left",
      "font-family": "'Roboto Slab'",
      "font-size": "590%",
      "font-weight": "700",
      "line-height": "80%",
      "margin-right": ".1em",
      "padding-left": ".1em",
      "width": ".8em",
    }
  }
>
  D
</span>
`;

exports[`HTMLtoJSX special tags should handle <pre> tags with children 1`] = `
<pre>
  <b>
    Hello world
      
    yo
  </b>
  this
     
  is
     
  a
  <i>
       
    test
  </i>
</pre>
`;

exports[`HTMLtoJSX special tags should strip malformed CSS properties in accordance with a robust CSS parser 1`] = `
<span
  style={
    {
      "*border-bottom": ".175em solid rgba( 209, 204, 189, 1)",
      "*font-style": "italic",
      "color": "rgb(209, 204, 189)",
      "float": "left",
      "font-family": "'Roboto Slab'",
      "font-size": "590%",
      "font-weight": "700",
      "line-height": "80%",
      "margin-right": ".1em",
      "padding-left": ".1em",
      "width": ".8em",
    }
  }
>
  D
</span>
`;

exports[`HTMLtoJSX special tags should use "defaultValue" for textareas 1`] = `
<textarea
  defaultValue="hello
world"
/>
`;
